overflow bug fixing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,9 @@
 body, input {
 	font-family: Arial, Helvetica, Verdana, sans-serif;
 	font-size: 11px;
-  overflow:hidden;
+  width: 100%;
+  height: 100%;
+  background:#555;
 }
 a {
 	color: #666;
@@ -39,6 +41,7 @@ a:hover {text-decoration: none;}
 	position:absolute;
 	top: 540px;
 	left: 0;
+	right: 0;
 	bottom: 0;
 	width: 100%; 
 	z-index: 20; 
@@ -144,6 +147,7 @@ a:hover {text-decoration: none;}
 	left: 100px; 
 	z-index: 5;
 	opacity: 0;
+	display:none;
 }
 #navigation .menu-item {
 	font-size: 14px; 
